# mauikit-filebrowsing

./: .gitignore  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  MauiKitFileBrowsingConfig.cmake.in  MauiKitFileBrowsingConfig.cmake.in.5  MauiKitFileBrowsingConfig.cmake.in.6  Messages.sh  mauikit-filebrowsing.py  metainfo.yaml
docs/: quickstart.md
examples/: Downloader.cpp  FileBrowser.qml  FileDialog.qml  FileLoader.cpp  KirigamiExample.qml  PlacesListBrowser.qml  TagsBar.qml  TagsDialog.qml
po/ar/: mauikitfilebrowsing.po
po/ca/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/ca@valencia/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/cs/: mauikitfilebrowsing.po
po/de/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/en_GB/: mauikitfilebrowsing.po
po/eo/: mauikitfilebrowsing.po
po/es/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/eu/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/fi/: mauikitfilebrowsing.po
po/fr/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/ga/: mauikitfilebrowsing.po
po/gl/: mauikitfilebrowsing.po
po/he/: mauikitfilebrowsing.po
po/it/: mauikitfilebrowsing.po
po/ja/: mauikitfilebrowsing.po
po/ka/: mauikitfilebrowsing.po
po/ko/: mauikitfilebrowsing.po
po/lt/: mauikitfilebrowsing.po
po/lv/: mauikitfilebrowsing.po
po/nl/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/pl/: mauikitfilebrowsing.po
po/pt/: mauikitfilebrowsing.po
po/pt_BR/: mauikitfilebrowsing.po
po/sa/: mauikitfilebrowsing.po
po/sk/: mauikitfilebrowsing.po
po/sl/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/sv/: mauikitfilebrowsing.po
po/tr/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/ug/: mauikitfilebrowsing.po
po/uk/: MauiKitFileBrowsingPlugin.po  mauikitfilebrowsing.po
po/zh_CN/: mauikitfilebrowsing.po
po/zh_TW/: mauikitfilebrowsing.po
src/: CMakeLists.txt  assets.qrc  resources.qrc
src/code/: downloader.cpp  downloader.h  filebrowsing_plugin.cpp  filebrowsing_plugin.h  fileloader.cpp  fileloader.h  fm.cpp  fm.h  fmlist.cpp  fmlist.h  fmstatic.cpp  fmstatic.h  moduleinfo.cpp  moduleinfo.h  openwithmodel.cpp  openwithmodel.h  placeslist.cpp  placeslist.h  syncing.cpp  syncing.h  syncinglist.h  tag.h  tagdb.cpp  tagdb.h  tagging.cpp  tagging.h  tagslist.cpp  tagslist.h  thumbnailer.cpp  thumbnailer.h
src/code/libwebdavclient/lib/: WebDAVClient.cpp  WebDAVClient.hpp
src/code/libwebdavclient/lib/dto/: WebDAVItem.cpp  WebDAVItem.hpp
src/code/libwebdavclient/lib/utils/: Environment.cpp  Environment.hpp  NetworkHelper.cpp  NetworkHelper.hpp  WebDAVReply.cpp  WebDAVReply.hpp  XMLHelper.cpp  XMLHelper.hpp
src/controls/: FileBrowser.qml  FileDialog.qml  NewTagDialog.qml  OpenWithDialog.qml  PlacesListBrowser.qml  PlacesSidebar.qml  TagsBar.qml  TagsDialog.qml  qmldir
src/controls.5/: FileBrowser.qml  FileDialog.qml  NewTagDialog.qml  OpenWithDialog.qml  TagsBar.qml  TagsDialog.qml
src/controls.5/private/: BrowserSettings.qml  BrowserView.qml
src/controls.6/: FavButton.qml  FileBrowser.qml  FileDialog.qml  NewTagDialog.qml  OpenWithDialog.qml  PlacesListBrowser.qml  TagsBar.qml  TagsDialog.qml
src/controls.6/private/: BrowserHolder.qml  BrowserSettings.qml  BrowserView.qml  TagDelegate.qml  TagList.qml
src/controls/private/: BrowserHolder.qml  BrowserMenu.qml  BrowserSettings.qml  BrowserView.qml  FileMenu.qml  TagDelegate.qml  TagList.qml
